fix section header spacing

--- a/src/css/components/settings.component.pcss
+++ b/src/css/components/settings.component.pcss
@@ -64,7 +64,7 @@
 #accessabar .ab-settings-section-title {
     font-family: var(--header-font);
     font-size: 1.4em;
-    margin: 0.75em 0;
+    margin: 1em 0 0;
 }
 
 #accessabar .ab-setting-title {
